--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -14,6 +14,15 @@ jobs:
         id: getversion
         run: echo "version=$(cat version)" >> $GITHUB_OUTPUT
 
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - uses: docker/build-push-action@v6.19.2
         with:
+          platforms: linux/amd64,linux/arm64
+          push: true
           tags: "${{ steps.getversion.outputs.version }}"
