--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -25,4 +25,4 @@ jobs:
         with:
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: "${{ steps.getversion.outputs.version }}"
+          tags: "ghcr.io/issugo/sonarqube_mcp:${{ steps.getversion.outputs.version }}"
