--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -15,7 +15,9 @@ jobs:
     
       - name: Read VERSION file
         id: getversion
-        run: echo "version=$(cat version)" >> $GITHUB_OUTPUT
+        run: |
+          echo "version=$(cat version)"
+          echo "version=$(cat version)" >> $GITHUB_OUTPUT
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
@@ -34,4 +36,5 @@ jobs:
         with:
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: "ghcr.io/issugo/sonarqube_mcp:${{ steps.getversion.outputs.version }}"
+          tags: |
+            ghcr.io/issugo/sonarqube_mcp:${{ steps.getversion.outputs.version }}
